--- a/DevStartPage/DevStartPage.Web/DevStartPage.Web.csproj
+++ b/DevStartPage/DevStartPage.Web/DevStartPage.Web.csproj
@@ -25,7 +25,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
-    <TypeScriptToolsVersion>2.2</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>2.5</TypeScriptToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -49,61 +49,11 @@
       <HintPath>..\packages\elmah.corelibrary.1.2.2\lib\Elmah.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="EO.Pdf">
-      <HintPath>..\..\lib\EO.pdf\EO.Pdf.dll</HintPath>
-    </Reference>
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MedAssets.A4.Common, Version=1.2.6.27316, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MedAssets.A4.Helpers.Web.1.2.7.11\lib\net40\MedAssets.A4.Common.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MedAssets.A4.Helpers, Version=1.2.7.27316, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MedAssets.A4.Helpers.Web.1.2.7.11\lib\net40\MedAssets.A4.Helpers.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MedAssets.Common, Version=17.2.0.1437, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MedAssets.Common.17.2.0.1437\lib\MedAssets.Common.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MedAssets.Platform.Api.Consumer, Version=17.2.0.1437, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MedAssets.Platform.Consumer.17.2.0.1437\lib\MedAssets.Platform.Api.Consumer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MedAssets.Platform.Common, Version=17.2.0.1437, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MedAssets.Platform.Consumer.17.2.0.1437\lib\MedAssets.Platform.Common.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MedAssets.Platform.ServiceProcess">
-      <HintPath>..\..\lib\MedAssets.Platform.ServiceProcess.16.2.0.5\lib\MedAssets.Platform.ServiceProcess.dll</HintPath>
-    </Reference>
-    <Reference Include="MedAssets.Platform.Web, Version=17.2.0.1437, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MedAssets.Platform.Web.17.2.0.1437\lib\MedAssets.Platform.Web.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MedAssets.Platform.Web.Consumer, Version=17.2.0.1437, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MedAssets.Platform.Web.17.2.0.1437\lib\MedAssets.Platform.Web.Consumer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="MedAssets.Web.Mvc, Version=17.2.0.1437, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MedAssets.Platform.Web.17.2.0.1437\lib\MedAssets.Web.Mvc.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.Http, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\MedAssets.Common.17.2.0.1437\lib\Microsoft.Http.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Http.Extensions, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\MedAssets.Common.17.2.0.1437\lib\Microsoft.Http.Extensions.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.IdentityModel, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\MedAssets.Platform.Consumer.17.2.0.1437\lib\Microsoft.IdentityModel.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.IdentityModel.Logging, Version=1.1.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.IdentityModel.Logging.1.1.3\lib\net451\Microsoft.IdentityModel.Logging.dll</HintPath>
       <Private>True</Private>
@@ -162,10 +112,6 @@
     </Reference>
     <Reference Include="NLog.Elmah, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.Elmah.4.0\lib\net35\NLog.Elmah.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="PAS.Pricing.Contracts, Version=1.0.0.74, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\PAS.Pricing.Contracts.1.0.0.74\lib\net462\PAS.Pricing.Contracts.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="StructureMap, Version=2.6.4.0, Culture=neutral, PublicKeyToken=e60ad81abae3c223, processorArchitecture=MSIL">
@@ -283,6 +229,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\JsonNetController.cs" />
+    <Compile Include="Controllers\JsonNetResult.cs" />
     <Compile Include="Controllers\ServicesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -390,7 +337,6 @@
     <Content Include="Content\styles\variables.scss" />
     <Content Include="Content\styles\_bootstrap.variables.scss" />
     <Content Include="Nlog.config" />
-    <Content Include="readme.sso.aaa.txt" />
     <Content Include="Content\plugins\chartjsplugin.js" />
     <Content Include="Scripts\lib\js\vendors.min.js" />
     <Content Include="Scripts\main.app.min.js" />
@@ -456,7 +402,6 @@
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="Content\styles\mixins.scss" />
     <None Include="Project_Readme.html" />
-    <Content Include="Readme\Platform.Consumer.ReadMe.docx" />
     <Content Include="Thinktecture.IdentityModel.chm" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Properties\PublishProfiles\pricing.pubxml" />
@@ -504,6 +449,7 @@
     <TypeScriptCompile Include="app\Shared\Widgets\Dialogs\mesage.dialog.component.ts" />
     <TypeScriptCompile Include="app\Shared\Widgets\Spinner\spinner.component.ts" />
     <TypeScriptCompile Include="app\StartPage\index.ts" />
+    <TypeScriptCompile Include="app\StartPage\Services\startpage.service.ts" />
     <TypeScriptCompile Include="app\StartPage\startpage.component.ts" />
     <TypeScriptCompile Include="app\Test\DatePicker\datepicker.component.ts" />
     <TypeScriptCompile Include="app\Test\Grid\data-table-demo1-data.ts" />
@@ -517,13 +463,9 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PAS.Pricing.Common\PAS.Pricing.Common.csproj">
-      <Project>{352DA321-7E41-40F5-81B8-F769C1E55489}</Project>
-      <Name>PAS.Pricing.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PAS.Pricing.Core\PAS.Pricing.Core.csproj">
-      <Project>{7109E25B-EAE1-49F6-B573-5E7EFE2D26CD}</Project>
-      <Name>PAS.Pricing.Core</Name>
+    <ProjectReference Include="..\DevStartPage.Core\DevStartPage.Core.csproj">
+      <Project>{60C15093-8AE4-4A87-AB3B-7E7E8CD12D59}</Project>
+      <Name>DevStartPage.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
