Adding Sql Util and updating string formatter

--- a/CopyDataUtil/CopyDataUtil.Core/CopyDataUtil.Core.csproj
+++ b/CopyDataUtil/CopyDataUtil.Core/CopyDataUtil.Core.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C65D2EF4-3256-46B9-8C98-7D6F70B684FE}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Common.Formaters</RootNamespace>
-    <AssemblyName>Common.Formaters</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <ProjectGuid>{491B077E-3049-4263-880A-7DE1DB0796FF}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>CopyDataUtil.Core</RootNamespace>
+    <AssemblyName>CopyDataUtil.Core</AssemblyName>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -32,9 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\GenericService\bin\Debug\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,16 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Convertors\Base64Convertors.cs" />
-    <Compile Include="Convertors\ConcreteTypeConverter.cs" />
-    <Compile Include="Convertors\ParsingConvertors.cs" />
-    <Compile Include="DatabaseStringFormatter.cs" />
-    <Compile Include="FormatManager.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Mappings\Configuration.cs" />
+    <Compile Include="Mappings\RootObject.cs" />
+    <Compile Include="Mappings\SourceDestinationColumnMapper.cs" />
+    <Compile Include="Models\CpPackage_Params.cs" />
+    <Compile Include="Models\DbModels\ColumnInfoSchema.cs" />
+    <Compile Include="Models\DbModels\TableInfoSchema.cs" />
+    <Compile Include="Mappings\SourceDestinationColumnMapping.cs" />
+    <Compile Include="Models\UpdateValueDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="Mappings\SourceDestinationColumnMappings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
