--- a/CopyDataUtil/CopyDataUtil.Core/Mappings/SourceDestinationColumnMappings.json
+++ b/CopyDataUtil/CopyDataUtil.Core/Mappings/SourceDestinationColumnMappings.json
@@ -1,23 +1,1 @@
-﻿{
-	"Configurations": [
-		{
-			"SourceTable": "dbo.BillPayrClassSmry",
-			"DestinationTable": "dbo.BillPayrClassSmry",
-			"StagingTable": "dbo.BillPayrClassSmry_Staging",
-			"SourceDestinationColumnMapping": [
-				{
-					"SourceColumn": "NSYSKEY",
-					"DestinationColumn": "Syskey"
-				},
-				{
-					"SourceColumn": "PAYER_CLASS",
-					"DestinationColumn": "PayerClass"
-				},
-				{
-					"SourceColumn": "MDATE",
-					"DestinationColumn": "ModifiedOn"
-				}
-			]
-		}
-	]
-}
+{"Configurations":[{"SourceTable":"CpDrg","DestinationTable":"CpDrg","StagingTable":null,"SourceDestinationColumnMapping":[{"SourceColumn":"BILLMAST","DestinationColumn":"BillMast"},{"SourceColumn":"DRG","DestinationColumn":"Drg"},{"SourceColumn":"DRG_VER","DestinationColumn":"DrgVer"},{"SourceColumn":"MDATE","DestinationColumn":"Mdate"},{"SourceColumn":"MTIME","DestinationColumn":"Mtime"},{"SourceColumn":"MUSER","DestinationColumn":"Muser"},{"SourceColumn":"NSYSKEY","DestinationColumn":"Nsyskey"}]}]}
