--- a/CopyDataUtil/CopyDataUtil.Core/CopyDataUtil.Core.csproj
+++ b/CopyDataUtil/CopyDataUtil.Core/CopyDataUtil.Core.csproj
@@ -58,7 +58,9 @@
     <None Include="Mappings\SourceDestinationColumnMappings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Mappings\TempMappings.json" />
+    <None Include="Mappings\TempMappings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
