--- a/Testing/PingExample/PingExample.csproj
+++ b/Testing/PingExample/PingExample.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceStatus.cs" />
     <Compile Include="WebsiteCheck.cs" />
+    <Compile Include="WmiServerManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
